# gtk-bar

./: Cargo.toml  README.md
src/: main.rs  style.scss
src/libs/: hyprland.rs  mod.rs  pulse.rs  shared_widget.rs
src/widgets/: battery.rs  clock.rs  hyprland.rs  mod.rs  music.rs  popup.rs  root.rs  systray.rs  volume.rs  workspaces.rs
src/windows/: mod.rs  popup_volume.rs
