[package]
name = "gtk-bar"
version = "0.1.0"
edition = "2021"

[dependencies]
async-broadcast = "0.7.1"
async-channel = "2.3.1"
async-std = "1.13.0"
chrono = "0.4.38"
chronos = "0.0.0"
gtk4 = {version = "0.9.3", features = ["v4_16"]}
gtk4-layer-shell = "0.4.0"
sass-rs = "0.2.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
